2009-03-31  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* Doctools version 2, index processing.