@@ -8,11 +8,11 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 # 
-# RCS: @(#) $Id: import_json.tcl,v 1.1 2009/04/01 04:28:37 andreas_kupries Exp $
+# RCS: @(#) $Id: import_json.tcl,v 1.2 2009/04/08 04:08:58 andreas_kupries Exp $
 
 # This package is a plugin for the the doctools::idx v2 system.  It
-# takes the list serialization of a keyword index and produces text in
-# json format.
+# takes text in json format and produces the list serialization of a
+# keyword index.
 
 # ### ### ### ######### ######### #########
 ## Requisites
