@@ -4,7 +4,7 @@
 # Copyright (c) 2009 Andreas Kupries <andreas_kupries@users.sourceforge.net>
 # All rights reserved.
 #
-# RCS: @(#) $Id: parse,v 1.1 2009/04/01 04:28:37 andreas_kupries Exp $
+# RCS: @(#) $Id: parse,v 1.2 2009/04/08 04:08:58 andreas_kupries Exp $
 
 # -------------------------------------------------------------------------
 
@@ -14,7 +14,7 @@ set mytestdir tests/data
 # -------------------------------------------------------------------------
 
 # We are checking that the various forms of docidx markup, as can be
-# generated by doctools::idx(::format::docidx) are valid input to the
+# generated by doctools::idx::export::docidx are valid input to the
 # docidx parser.
 #
 # section {} holds the non-canonical input we have to accept and make
